# scrabble-c

./: .gitignore  CMakeLists.txt  build.zig  build.zig.zon  palabras.txt
src/: arbol_diccionario.c  arbol_diccionario.h  graphic.c  graphic.h  main.c  main.zig  scrabble.c  scrabble.h
